# KuEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/bugs/: template.md
docs/design/: 00-overview.md  01-rhi-layer.md  02-render-pass.md  03-logging.md  04-triangle-example-tech.md  05-ui-layer.md  06-v0.2-execution-plan.md  07-resource-asset-spec.md  08-gltf-model-loading.md
docs/logs/: 2026-04-12-worklog.md  2026-04-14-worklog.md  2026-04-15-worklog.md  2026-04-19-worklog.md
docs/usage/: alpha3pass-example.md  mclaren-example.md  triangle-example.md  v0.2-alpha-release-notes.md  v0.2-regression-checks.md
examples/: CMakeLists.txt
examples/alpha3pass/: AlphaPasses.cpp  AlphaPasses.h  CMakeLists.txt  main.cpp  run_alpha3pass.bat
examples/alpha3pass/shaders/: alpha.frag  alpha.vert  compile_shaders.bat
examples/cube/: CMakeLists.txt  CubePass.cpp  CubePass.h  main.cpp  run_cube.bat
examples/cube/shaders/: compile_shaders.bat  cube.frag  cube.vert
examples/mclaren/: CMakeLists.txt  MclarenPass.cpp  MclarenPass.h  main.cpp  run_mclaren.bat
examples/mclaren/shaders/: compile_shaders.bat  mclaren.frag  mclaren.vert
examples/triangle/: CMakeLists.txt  TrianglePass.cpp  TrianglePass.h  main.cpp  run_triangle.bat
examples/triangle/shaders/: compile_shaders.bat  triangle.frag  triangle.vert
resources/: README.md
resources/manifests/: asset-registry.json  asset-registry.template.json
resources/materials/pbr/: mclaren-765lt.material.json
resources/scenes/sandbox/: mclaren-sandbox.scene.json
src/: CMakeLists.txt
src/KuEngine/: KuEngine.h
src/KuEngine/Asset/: AssetConfig.cpp  AssetConfig.h  Model.cpp  Model.h
src/KuEngine/Core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Log.cpp  Log.h  Window.cpp  Window.h
src/KuEngine/RHI/: CommandList.cpp  CommandList.h  RHIBuffer.cpp  RHIBuffer.h  RHICommon.h  RHIDevice.cpp  RHIDevice.h  RHIInstance.cpp  RHIInstance.h  RHIPipeline.cpp  RHIPipeline.h  RHIShader.cpp  RHIShader.h  RHITexture.cpp  RHITexture.h  SwapChain.cpp  SwapChain.h  SyncManager.cpp  SyncManager.h  vma.cpp
src/KuEngine/Render/: RenderGraph.cpp  RenderGraph.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
src/KuEngine/UI/: UIOverlay.cpp  UIOverlay.h
tests/: CMakeLists.txt
tests/core/: test_asset_config.cpp  test_engine.cpp  test_render_graph.cpp
